--- a/deploy/helm/m13k/templates/secret.yaml
+++ b/deploy/helm/m13k/templates/secret.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.certManager.enabled -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,3 +9,4 @@ type: tls
 data:
   server.crt: {{ .Files.Get "files/cert.pem" | b64enc }}
   server.key: {{ .Files.Get "files/key.pem" | b64enc }}
+{{- end -}}
