--- a/deploy/helm/m13k/Chart.yaml
+++ b/deploy/helm/m13k/Chart.yaml
@@ -21,3 +21,9 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 appVersion: 1.16.0
+
+# dependencies:
+# - name: cert-manager
+#   version: "1.0.1"
+#   repository: "https://charts.jetstack.io"
+#   condition: certManager.enabled
