--- a/deploy/helm/m13k/values.yaml
+++ b/deploy/helm/m13k/values.yaml
@@ -14,6 +14,9 @@ imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
 
+certManager:
+  enabled: true
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
